Adding some styling

--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
         </div>
       </form>
       <div class="photo-container">
-        <img src="./assets/images/illustration-sign-up-desktop.svg" alt="" />
+        <img
+          src="./assets/images/illustration-sign-up-desktop.svg"
+          alt=""
+          id="side-img"
+        />
       </div>
     </div>
 
